--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>Learn WebGL with Three.js</title>
   </head>
   <body>
-    <h1>Learn WebGL with Three.js</h1>
+    <!-- <h1>Learn WebGL with Three.js</h1> -->
   </body>
 </html>
