--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Learn WebGL with Three.js</title>
   </head>
   <body>
     <!-- <h1>Learn WebGL with Three.js</h1> -->
     <canvas class="webgl"></canvas>
+
+    <section class="section">
+      <h1>My Portfolio</h1>
+    </section>
+    <section class="section">
+      <h2>My projects</h2>
+    </section>
+    <section class="section">
+      <h2>Contact me</h2>
+    </section>
   </body>
 </html>
