--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- <h1>Learn WebGL with Three.js</h1> -->
     <canvas class="webgl"></canvas>
 
-    <!-- <section class="section">
+    <section class="section">
       <h1>My Portfolio</h1>
     </section>
     <section class="section">
@@ -19,6 +19,6 @@
     </section>
     <section class="section">
       <h2>Contact me</h2>
-    </section> -->
+    </section>
   </body>
 </html>
