--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Learn WebGL with Three.js</title>
   </head>
   <body>
+    <div class="App"></div>
     <!-- <h1>Learn WebGL with Three.js</h1> -->
     <canvas class="webgl"></canvas>
 
@@ -20,5 +21,7 @@
     <section class="section">
       <h2>Contact me</h2>
     </section> -->
+
+    <script src="https://cdn.jsdelivr.net/npm/tweakpane@3.1.2/dist/tweakpane.min.js"></script>
   </body>
 </html>
